# Simod

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  Dockerfile  Jenkinsfile  README.md  Simod.ipynb  alpha_oracle_main.py  ansible.cfg  build_docker.sh  build_docker_base.sh  build_poetry_docker.bash  build_poetry_local_arm64_macos.bash  config.ini  coverage.xml  docker-compose.yaml  environment.yml  exp_generator.py  figures.py  graph.json  id.json  jenkins.sh  licenses.txt  log_data.csv  menu.py  pipeline.bat  process_graph.json  process_stats.csv  pyproject.toml  pytest.ini  requirements.txt  resource.csv  run.sh  settings.json  setup.py  simo.py  simo.yml  simod.py  (+12 more)
.github/: CODEOWNERS
.github/workflows/: CI.yml  ci.yml  main.yml  python-app.yml  release.yml  simod.yml  simod_http.yml
.ipynb_checkpoints/: Simod-checkpoint.ipynb
analyzer/: log_measurement.py  support.py
ansible/: deploy.yml  docker.yml  experiment.yml  inventory.yml  test.yml
ansible/templates/: docker_run_cmd.sh.j2
benchmarking/: analyze_results.py  collect_metrics.py  collect_metrics_grouped.py  collect_results.py  compare_metrics.py  docker_collect_results.py  docker_jobs.py  hpc_build.bash  plot_measurements.py  preprocess_logs.py  process_cycle_times.py  process_metrics.py  sbatch_jobs.py  slurm_metadata.py  slurm_metadata_grouped.py
benchmarking/input/: config-3.3.3.yml  config.yml  (+4 more)
config/: discover_with_model_config.yml  discover_without_model_config.yml  optimize_config.yml  optimize_debug_config.yml  optimize_debug_with_model_config.yml  optimize_new_with_model_config.yml  optimize_new_without_model_config.yml
docker/: build.bash  build_conda.bash  build_from_git.bash  jenkins.docker  simod.docker  simod_base.docker  simod_base.dockerfile  simod_base_py310.dockerfile  simod_base_slim.dockerfile  simod_build.dockerfile  simod_http.dockerfile  simod_http_run.bash  simod_http_tu_berlin.dockerfile  simod_test.docker  test.bash
docs/: requirements.txt  simod.plantuml  simod2.plantuml
extraction/: gateways_probabilities.py  gateways_probabilities2.py  gateways_probabilities3.py  interarrival_definition.py  log_reader.py  log_replayer.py  log_replayer1.py  manual_edition_ui.py  parameter_extraction.py  pdf_definition.py  pdf_finder.py  process_structure.py  role_discovery.py  role_discovery1.py  schedule_tables.py  support.py  tasks_evaluation.py  tasks_evaluator.py
inputs/: BPI_Challenge_2012_W_Two_TS_testing.csv  BPI_Challenge_2012_W_Two_TS_training.csv  ConsultaDataMining201618.bpmn  ConsultaDataMining201618.csv  ConsultaDataMining201618_testing.csv  ConsultaDataMining201618_training.csv  Production.bpmn  Production.csv  Production_testing.csv  Production_training.csv  PurchasingExample.bpmn  PurchasingExample.csv  PurchasingExample_testing.csv  PurchasingExample_training.csv
opt_structure/: structure_miner.py  structure_optimizer.py  structure_params_miner.py
opt_times/: times_optimizer.py  times_params_miner.py
proconformance/: readMe
simo/: __init__.py  assets_writer.py  bpmn_reader.py  config.ini  gateways_probabilities.py  interarrival_definition.py  log_reader.py  log_replayer.py  process_structure.py  role_discovery.py  simo.py  support.py  task_duration_distribution.py  traces_alignment.py  xml_writer.py
src/: discoverer.py  optimizer.py
support_modules/: support.py
tasks/: conda.py  java.py  pip.py  tasks.py  test.py
test_assets/: discover_with_model_config.yml  discover_without_model_config.yml  optimize_config.yml  optimize_debug_config.yml  optimize_debug_config_2.yml  optimize_debug_with_model_config.yml  optimize_new_with_model_config.yml  optimize_new_without_model_config.yml
tests/: cli_test.py  common_routines_test.py  configuration_test.py  conftest.py  postprocessing_replayer_test.py  test_alignment.py  test_bpic15.py  test_calendar_discovery.py  test_calendars.py  test_cli.py  test_common_routines.py  test_common_routintes.py  test_configuration.py  test_discoverer.py  test_extraneous_activity_delays.py  test_intervals.py  test_metrics.py  test_multitasking.py  test_multitasking_alt.py  test_optimizer.py  test_preprocessor.py  test_prosimos.py  test_qbp.py  test_readers.py  test_replayer.py  test_similarity_metrics.py  test_simod.py  test_simulator.py  test_splitminer.py  test_structure_optimizer.py  test_task_evaluator.py  test_utilities.py
user_interface/: simod_figs.py  simod_sres.py
(+433 files in other folders)
