[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "simod"
version = "3.3.1"
authors = ["Manuel Camargo", "Ihar Suvorau", "David Chapela"]
description = "Simod is a Python tool for automated discovery of business process simulation models from event logs."

[tool.poetry.dependencies]
python = "^3.9,<3.12"
click = "^8.1.3"
hyperopt = "^0.2.7"
jellyfish = "^0.11"
lxml = "^4.9.1"
matplotlib = "^3.6.0"
networkx = "^2.8.7"
numpy = "^1.23.4"
pandas = "^2"
pendulum = "^2.1.2"
pydantic = "^1.10.3"
python-dotenv = "^0.21.0"
python-multipart = "^0.0.5"
pytz = "^2022.4"
PyYAML = "^6.0"
requests = "^2.28.2"
scipy = "^1.9.2"
statistics = "^1.0.3.5"
tqdm = "^4.64.1"
xmltodict = "^0.13.0"
log-distance-measures = { git = "https://github.com/AutomatedProcessImprovement/log-distance-measures.git", branch = "main" }
pix-utils = { git = "https://github.com/AutomatedProcessImprovement/pix-utils.git", branch = "main" }
start-time-estimator = { git = "https://github.com/AutomatedProcessImprovement/start-time-estimator.git", branch = "main" }
DiffResBP-Simulator = { git = "https://github.com/AutomatedProcessImprovement/Prosimos.git", branch = "main" }
extraneous-activity-delays = { git = "https://github.com/AutomatedProcessImprovement/extraneous-activity-delays.git" }
openxes-cli-py = "^0.1.11"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
pytest = "^7.1.3"
pytest-cov = "^4"
memory-profiler = "^0.61.0"

[virtualenvs]
in-project = true

[tool.poetry.scripts]
simod = "simod.cli:main"
