[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "simod"
version = "3.5.2"
authors = ["Manuel Camargo", "Ihar Suvorau", "David Chapela"]
description = "Simod is a Python tool for automated discovery of business process simulation models from event logs."

[tool.poetry.dependencies]
python = "^3.9,<3.12"
click = "^8.1.3"
hyperopt = "^0.2.7"
jellyfish = "^0.11"
lxml = "^4.9.1"
matplotlib = "^3.6.0"
networkx = "^3.1"
numpy = "^1.23.4"
pandas = "^2"
pendulum = "^2.1.2"
pydantic = "^1.10.3"
python-dotenv = "^0.21.0"
python-multipart = "^0.0.5"
pytz = "^2023.3"
PyYAML = "^6.0"
requests = "^2.28.2"
scipy = "^1.9.2"
statistics = "^1.0.3.5"
tqdm = "^4.64.1"
xmltodict = "^0.13.0"
prosimos = "^1.2.4"
extraneous-activity-delays = { git = "https://github.com/AutomatedProcessImprovement/extraneous-activity-delays.git" }
openxes-cli-py = "^0.1"
pix-framework = "^0.8.8"
start-time-estimator = "^1.10"
log-distance-measures = "^1.0.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
pytest = "^7.1.3"
pytest-cov = "^4"
memory-profiler = "^0.61.0"
pylint = "^2.17.4"

[virtualenvs]
in-project = true

[tool.poetry.scripts]
simod = "simod.cli:main"

[tool.pytest.ini_options]
markers = [
    "integration",
    "system",
]