[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "simod"
version = "4.0.1"
authors = [
    "Ihar Suvorau <ihar.suvorau@gmail.com>",
    "David Chapela <david.chapela@ut.ee>",
    "Manuel Camargo <manuel.camargo@ut.ee>",
]
description = "Simod is a Python tool for automated discovery of business process simulation models from event logs."
readme = "README.md"
packages = [{ include = "simod", from = "src" }]

[tool.poetry.dependencies]
python = "^3.9,<3.12"
click = "^8.1.3"
hyperopt = "^0.2.7"
lxml = "^4.9.1"
matplotlib = "^3.6.0"
networkx = "^3.1"
numpy = "^1.23.4"
pandas = "^2.1.0"
pendulum = "^2.1.2"
pydantic = "^2.3.0"
python-dotenv = "^1.0.0"
python-multipart = "^0.0.6"
pytz = "^2023.3"
PyYAML = "^6.0"
requests = "^2.28.2"
scipy = "^1.9.2"
statistics = "^1.0.3.5"
tqdm = "^4.64.1"
xmltodict = "^0.13.0"
prosimos = "^2.0.3"
extraneous-activity-delays = "^2.1.21"
openxes-cli-py = "^0.1.15"
pix-framework = "^0.13.7"
log-distance-measures = "^1.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-cov = "^4"
memory-profiler = "^0.61.0"
pylint = "^2.17.4"
setuptools = "^67.8.0"
seaborn = "^0.12.2"
pytest-benchmark = "^4.0.0"
snakeviz = "^2.2.0"

[tool.poetry.scripts]
simod = "simod.cli:main"

[tool.ruff]
line-length = 120

[tool.black]
line-length = 120

[tool.pytest.ini_options]
markers = ["integration", "system", "manual", "benchmark", "smoke"]
